--- a/Proyecto Grupo 7 Progra Avanzada/Views/Cajas/Index.cshtml
+++ b/Proyecto Grupo 7 Progra Avanzada/Views/Cajas/Index.cshtml
@@ -38,7 +38,7 @@
                     <a asp-action="Edit" asp-route-id="@item.IdCaja" class="btn btn-sm btn-warning">Editar</a> |
                     <a asp-action="Details" asp-route-id="@item.IdCaja" class="btn btn-sm btn-info">Detalles</a> |
                     <a class="btn btn-sm btn-outline-secondary disabled" title="Función aún no disponible">Ver SINPE</a> |
-                    <a class="btn btn-sm btn-outline-dark disabled" title="Función aún no disponible">Bitácora</a> |
+                    <a class="btn btn-sm btn-info" asp-area="" asp-controller="Bitacora" asp-action="Index">Bitacora</a>
                     <a asp-action="Delete" asp-route-id="@item.IdCaja" class="btn btn-sm btn-danger">Eliminar</a>
                 </td>
             </tr>
