--- a/Proyecto Grupo 7 Progra Avanzada/Views/Shared/_Layout.cshtml
+++ b/Proyecto Grupo 7 Progra Avanzada/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Bitacora" asp-action="Index">Bitacora</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Sinpe" asp-action="Registrar">Registrar SINPE</a>
+                        </li>
                     </ul>
                 </div>
             </div>
