--- a/Proyecto Grupo 7 Progra Avanzada/Views/Cajas/Index.cshtml
+++ b/Proyecto Grupo 7 Progra Avanzada/Views/Cajas/Index.cshtml
@@ -37,7 +37,7 @@
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.IdCaja" class="btn btn-sm btn-warning">Editar</a> |
                     <a asp-action="Details" asp-route-id="@item.IdCaja" class="btn btn-sm btn-info">Detalles</a> |
-                    <a class="btn btn-sm btn-outline-secondary disabled" title="Función aún no disponible">Ver SINPE</a> |
+                    <a asp-controller="Sinpe" asp-action="VerPorCaja" asp-route-telefono="@item.TelefonoSINPE" class="btn btn-sm btn-success"> Ver SINPE</a> |
                     <a class="btn btn-sm btn-info" asp-area="" asp-controller="Bitacora" asp-action="Index">Bitacora</a>
                     <a asp-action="Delete" asp-route-id="@item.IdCaja" class="btn btn-sm btn-danger">Eliminar</a>
                 </td>
