--- a/Proyecto Grupo 7 Progra Avanzada/Views/Shared/_Layout.cshtml
+++ b/Proyecto Grupo 7 Progra Avanzada/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Identity
+@using Proyecto_Grupo_7_Progra_Avanzada.Models
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+
+<!DOCTYPE html>
 <html lang="es" class="h-100">
 <head>
     <meta charset="utf-8" />
@@ -8,6 +13,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Proyecto_Grupo_7_Progra_Avanzada.styles.css" asp-append-version="true" />
 
+    <!-- CLAVE: Font Awesome para iconos de usuario y módulos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 </head>
 
@@ -20,30 +26,65 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+
+                    <!-- ENLACES DE MÓDULOS (AUTORIZADOS) -->
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Comercios" asp-action="Index">Comercio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Cajas" asp-action="Index">Cajas</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Bitacora" asp-action="Index">Bitacora</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Sinpe" asp-action="Registrar">Registrar SINPE</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Configuraciones" asp-action="Index">Configuraciones</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Reportes" asp-action="Index">Reportes Mensuales</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Usuarios" asp-action="Index">Usuarios</a>
-                        </li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <!-- MÓDULOS DEL ADMINISTRADOR Y CONTADOR -->
+                            @if (User.IsInRole("Administrador") || User.IsInRole("Contador"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Comercios" asp-action="Index">Comercios</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Reportes" asp-action="Index">Reportes Mensuales</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Configuraciones" asp-action="Index">Configuraciones</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Sinpe" asp-action="Registrar">Registrar SINPE</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Bitacora" asp-action="Index">Bitacora</a>
+                                </li>
+                            }
+
+                            <!-- MÓDULOS DEL CAJERO -->
+                            @if (User.IsInRole("Cajero"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Cajas" asp-action="Index">Cajas (Mis Cajas)</a>
+                                </li>
+                            }
+
+                            <!-- MÓDULOS DEL ADMINISTRADOR EXCLUSIVAMENTE (Usuarios y Reserva de liquidez) -->
+                            @if (User.IsInRole("Administrador"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="Usuarios" asp-action="Index">Usuarios</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-controller="ReservaLiquidez" asp-action="Index">Reserva Liquidez</a>
+                                </li>
+                            }
+                        }
+                        else
+                        {
+                            <!-- Enlaces visibles si NO está logueado -->
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            </li>
+                        }
                     </ul>
+
+                    <!-- PUNTO CLAVE: INCLUIR LA VISTA PARCIAL DE LOGIN/LOGOUT -->
+                    <partial name="_LoginPartial" />
+                    <!-- FIN DEL PUNTO CLAVE -->
+
                 </div>
             </div>
         </nav>
