--- a/Proyecto Grupo 7 Progra Avanzada/Views/_ViewImports.cshtml
+++ b/Proyecto Grupo 7 Progra Avanzada/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using Proyecto_Grupo_7_Progra_Avanzada
 @using Proyecto_Grupo_7_Progra_Avanzada.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@using Microsoft.AspNetCore.Identity
+@attribute [Microsoft.AspNetCore.Authorization.Authorize] 
